Company wise data fetch and readme updated!
