# project-management-backend/src/main/java/com/biswas/project_management_backend/controller/TeamController.java
@@ -23,9 +23,9 @@ public class TeamController {
         return ResponseEntity.ok(teamService.createTeam(dto));
     }
 
-    @GetMapping
-    public ResponseEntity<List<TeamDto>> getAllTeams() {
-        return ResponseEntity.ok(teamService.getAllTeams());
+    @GetMapping("/company/{companyId}")
+    public ResponseEntity<List<TeamDto>> getAllTeams(@PathVariable Long companyId) {
+        return ResponseEntity.ok(teamService.getAllTeams(companyId));
     }
 
     @GetMapping("/{id}")
