# project-management-backend/src/main/java/com/biswas/project_management_backend/dto/ProjectDto.java
@@ -28,4 +28,6 @@ public class ProjectDto {
     private List<UserDto> members;
 
     private Long taskCount;
+
+    private Long companyId;
 }
