# project-management-backend/src/main/java/com/biswas/project_management_backend/dto/TeamDto.java
@@ -2,6 +2,7 @@ package com.biswas.project_management_backend.dto;
 
 import lombok.*;
 
+import java.util.List;
 import java.util.Set;
 
 @Data
@@ -12,5 +13,6 @@ public class TeamDto {
     private Long id;
     private String name;
     private String description;
-    private Set<String> members;
+    private List<String> members;
+    private Long companyId;
 }
